--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,16 @@ on:
   # on-demand
   repository_dispatch:
 
+env:
+  branch-to-build: ${{ github.event.client_payload.branch || 'master' }}
+
 jobs:
   build:
-    name: Build for the ${{ github.event.client_payload.branch }} branch
+    name: Build for the ${{ env.branch-to-build }} branch
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: ${{ github.event.client_payload.branch || 'master' }}
+        ref: ${{ env.branch-to-build }}
     - name: Run index.js
       run: node index.js
