--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
   build:
     env:
       branch-to-build: ${{ github.event.client_payload.branch || 'master' }}
-    name: Build for the ${{ job.build.branch-to-build }} branch
+    name: Build for the ${{ jobs.build.branch-to-build }} branch
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: ${{ job.build.branch-to-build }}
+        ref: ${{ jobs.build.branch-to-build }}
     - name: Run index.js
       run: node index.js
