--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,16 @@ on:
   # on-demand
   repository_dispatch:
 
+env:
+  branch-to-build: ${{ github.event.client_payload.branch || 'master' }}
+      
 jobs:
   build:
-    env:
-      branch-to-build: ${{ github.event.client_payload.branch || 'master' }}
-    name: Build for the ${{ jobs.build.branch-to-build }} branch
+    name: Build for the ${{ branch-to-build }} branch
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: ${{ jobs.build.branch-to-build }}
+        ref: ${{ branch-to-build }}
     - name: Run index.js
       run: node index.js
